test/conformance/chainsaw/generating-policies/foreach/clone/clone-sync-create/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: GeneratingPolicy
metadata:
  name: foreach-clone-sync-create
spec:
  evaluation:
    synchronize:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["configmaps"]
  variables:
    - name: nsList
      expression: "object.data.namespaces.split(',')"
    - name: source
      expression: resource.get("v1", "secrets", "default", "foreach-clone-sync-create")
  generate:
    - expression: >
        variables.nsList.all(ns, generator.apply(ns, [variables.source]))
