test/conformance/chainsaw/generating-policies/foreach/clone/clone-sync-create/source.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: foreach-clone-sync-create
  namespace: default
type: Opaque
