test/conformance/chainsaw/generating-policies/foreach/clone/clone-sync-create/policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: GeneratingPolicy
metadata:
  name: foreach-clone-sync-create
status:
  conditionStatus:
    conditions:
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
    - message: Policy is ready for reporting.
      reason: Succeeded
      status: "True"
      type: RBACPermissionsGranted
    message: ""
    ready: true
