test/conformance/chainsaw/generating-policies/foreach/clone/clone-sync-create/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: foreach-clone-sync-create
spec:
  steps:
  - name: create permissions
    try:
    - apply:
        file: permissions.yaml
  - name: create namespaces
    try:
    - apply:
        file: namespaces.yaml
  - name: create source
    try:
    - create:
        file: source.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: foreach-clone-sync-create
  - name: create trigger
    try:
    - apply:
        file: trigger.yaml
  - name: check that the secret is generated in each namespace
    try:
    - assert:
        file: downstream-assert.yaml
        timeout: 60s
